feat. change size viewport

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ https://cdn.jsdelivr.net/npm/tinycrop@1.7.0/dist/tinycrop.min.js
     <main class="main">
 
       <section class="section self">
-        <h2 class="title">Самопал "CUTtie"</h2>
+        <h2 class="title">"CUTtie"</h2>
         
         <input type="file" class="section__upload" id="uploadSelf" />
         <div class="section__ch">
