--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@ https://cdn.jsdelivr.net/npm/tinycrop@1.7.0/dist/tinycrop.min.js
       </section>
     </main>
   </body>
-  <script src="index.js"></script>
+  <!-- <script src="index.js"></script> -->
+  <script src="index2.js"></script>
 </html>
